--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/List.razor
@@ -91,7 +91,7 @@
                                 </td>
                                 <td data-field="Title">
                                     <div class="laytable-cell-14-0-2">
-                                        <a href="/fss/task_group/tasklist/@info.Id">【@info.JobName】@info.Caption</a>
+                                        <a href="/fss/tasks/list/@info.Id">【@info.JobName】@info.Caption</a>
                                     </div>
                                 </td>
                                 <td data-field="Items">
