--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
@@ -34,6 +34,16 @@
                             任务组
                         </NavLink>
                     </dd>
+                    <dd data-name="grid">
+                        <NavLink class="nav-link" href="/fss/tasks/list" Match="NavLinkMatch.All">
+                            失败任务
+                        </NavLink>
+                    </dd>
+                    <dd data-name="grid">
+                        <NavLink class="nav-link" href="/fss/tasks/unrunlist" Match="NavLinkMatch.All">
+                            未执行任务
+                        </NavLink>
+                    </dd>
                     <dd data-name="button">
                         <NavLink class="nav-link" href="/fss/node/list" Match="NavLinkMatch.All">
                             服务端节点
