更新链接地址

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
@@ -35,7 +35,7 @@
                         </NavLink>
                     </dd>
                     <dd data-name="grid">
-                        <NavLink class="nav-link" href="/fss/tasks/list" Match="NavLinkMatch.All">
+                        <NavLink class="nav-link" href="/fss/tasks/faillist" Match="NavLinkMatch.All">
                             失败任务
                         </NavLink>
                     </dd>
