完成管理员页面

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/builder/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/builder/List.razor
@@ -133,7 +133,7 @@
                                         <td>
                                             <div class="layui-table-cell laytable-cell-14-0-6">
                                                 <button class="layui-btn layui-btn-sm layui-btn-danger" @onclick="() => AddBuild(info)">构建</button>
-                                                <button class="layui-btn layui-btn-sm layui-btn-danger" @onclick="() => SetImages(info)">同步</button>
+                                                <button class="layui-btn layui-btn-sm" @onclick="() => SetImages(info)">同步</button>
                                             </div>
                                         </td>
                                     </tr>
