--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
@@ -136,10 +136,10 @@
                         <a href="javascript:;">管理员设置</a>
                         <dl class="layui-nav-child">
                             <dd>
-                                <NavLink href="set/user/info.html">管理员列表</NavLink>
+                                <NavLink href="/admin/list">管理员列表</NavLink>
                             </dd>
                             <dd>
-                                <NavLink href="set/user/password.html">修改密码</NavLink>
+                                <NavLink href="/admin/changepwd">修改密码</NavLink>
                             </dd>
                         </dl>
                     </dd>
