--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/docker/hub/Add.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/docker/hub/Add.razor
@@ -64,7 +64,7 @@
             }
             await _iocManager.Resolve<IDockerHubService>().AddAsync(_info);
             await js.InvokeVoidAsync("layer.alert", "添加成功", new {icon = 1});
-            nav.NavigateTo("/docker/hub/list");
+            GotoList();
         }
         catch (Exception e)
         {
