修改更新页面的逻辑

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/admin/Add.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/admin/Add.razor
@@ -16,13 +16,13 @@
     <div class="layui-card-body" style="padding: 15px;">
         <div class="layui-form-item">
             <label class="layui-form-label">管理员名称</label>
-            <div class="layui-input-block">
+            <div class="layui-input-inline">
                 <input type="text" @bind="_info.UserName" autocomplete="off" placeholder="请输入管理员名称" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">管理员密码</label>
-            <div class="layui-input-block">
+            <div class="layui-input-inline">
                 <input type="password" @bind="_info.UserPwd" autocomplete="off" placeholder="请输入管理员密码" class="layui-input">
             </div>
         </div>
