--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/docker/hub/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/docker/hub/Update.razor
@@ -67,7 +67,7 @@
         if (Id < 1 || _info == null)
         {
             await js.InvokeVoidAsync("layer.alert", "Git仓库不存在", new {icon = 2, title = "出错了"});
-            nav.NavigateTo($"/docker/hub/list");
+            GotoList();
             return;
         }
         try
@@ -79,7 +79,7 @@
 
             await _iocManager.Resolve<IDockerHubService>().UpdateAsync(Id, _info);
             await js.InvokeVoidAsync("layer.alert", "修改成功", new {icon = 1});
-            nav.NavigateTo($"/docker/hub/update/{_info.Id}");
+            GotoList();
         }
         catch (Exception e)
         {
@@ -92,7 +92,7 @@
         if (Id < 1 || _info == null)
         {
             await js.InvokeVoidAsync("layer.alert", "Git仓库不存在", new {icon = 2, title = "出错了"});
-            nav.NavigateTo($"/docker/hub/list");
+            GotoList();
         }
     }
 
@@ -104,7 +104,7 @@
             if (_info == null)
             {
                 await js.InvokeVoidAsync("layer.alert", "Git仓库不存在", new {icon = 2, title = "出错了"});
-                nav.NavigateTo($"/docker/hub/list");
+                GotoList();
             }
         }
     }
