--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/git/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/git/Update.razor
@@ -73,7 +73,7 @@
         if (Id < 1 || _info == null)
         {
             await js.InvokeVoidAsync("layer.alert", "Git仓库不存在", new {icon = 2, title = "出错了"});
-            nav.NavigateTo($"/git/list");
+            GotoList();
             return;
         }
         try
@@ -86,7 +86,7 @@
             
             await _iocManager.Resolve<IGitService>().UpdateAsync(Id, _info);
             await js.InvokeVoidAsync("layer.alert", "修改成功", new {icon = 1});
-            nav.NavigateTo($"/git/update/{_info.Id}");
+            GotoList();
         }
         catch (Exception e)
         {
@@ -99,7 +99,7 @@
         if (Id < 1 || _info == null)
         {
             await js.InvokeVoidAsync("layer.alert", "Git仓库不存在", new {icon = 2, title = "出错了"});
-            nav.NavigateTo($"/git/list");
+            GotoList();
         }
     }
 
@@ -111,7 +111,7 @@
             if (_info == null)
             {
                 await js.InvokeVoidAsync("layer.alert", "Git仓库不存在", new {icon = 2, title = "出错了"});
-                nav.NavigateTo($"/git/list");
+                GotoList();
             }
         }
     }
