--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/cluster/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/cluster/Update.razor
@@ -78,13 +78,13 @@
         if (Id < 1 || _info == null)
         {
             await js.InvokeVoidAsync("layer.alert", "Yaml模板不存在", new {icon = 2, title = "出错了"});
-            nav.NavigateTo($"/k8s/cluster/list");
+            GotoList();
         }
         try
         {
             await _iocManager.Resolve<IClusterService>().UpdateAsync(Id, _info);
             await js.InvokeVoidAsync("layer.alert", "修改成功", new {icon = 1});
-            nav.NavigateTo($"/k8s/cluster/update/{_info.Id}");
+            GotoList();
         }
         catch (Exception e)
         {
@@ -97,7 +97,7 @@
         if (Id < 1 || _info == null)
         {
             await js.InvokeVoidAsync("layer.alert", "Yaml模板不存在", new {icon = 2, title = "出错了"});
-            nav.NavigateTo($"/k8s/cluster/list");
+            GotoList();
         }
     }
 
@@ -109,7 +109,7 @@
             if (_info == null)
             {
                 await js.InvokeVoidAsync("layer.alert", "Yaml模板不存在", new {icon = 2, title = "出错了"});
-                nav.NavigateTo($"/k8s/cluster/list");
+                GotoList();
             }
         }
     }
