--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project_group/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project_group/Update.razor
@@ -61,7 +61,7 @@
         if (Id < 1 || _info == null)
         {
             await js.InvokeVoidAsync("layer.alert", "项目组不存在", new {icon = 2, title = "出错了"});
-            nav.NavigateTo($"/project_group/list");
+            GotoList();
             return;
         }
 
@@ -75,7 +75,7 @@
             }
             await _iocManager.Resolve<IProjectGroupService>().UpdateAsync(Id, _info);
             await js.InvokeVoidAsync("layer.alert", "修改成功", new {icon = 1});
-            nav.NavigateTo($"/project_group/update/{_info.Id}");
+            GotoList();
         }
         catch (Exception e)
         {
@@ -88,7 +88,7 @@
         if (Id < 1 || _info == null)
         {
             await js.InvokeVoidAsync("layer.alert", "项目组不存在", new {icon = 2, title = "出错了"});
-            nav.NavigateTo($"/project_group/list");
+            GotoList();
         }
     }
 
@@ -100,7 +100,7 @@
             if (_info == null)
             {
                 await js.InvokeVoidAsync("layer.alert", "项目组不存在", new {icon = 2, title = "出错了"});
-                nav.NavigateTo($"/project_group/list");
+                GotoList();
             }
             foreach (var infoClusterId in _info.ClusterIds)
             {
