--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/docker/tpl/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/docker/tpl/Update.razor
@@ -53,13 +53,13 @@
         if (Id < 1 || _info == null)
         {
             await js.InvokeVoidAsync("layer.alert", "Dockerfile模板不存在", new {icon = 2, title = "出错了"});
-            nav.NavigateTo($"/docker/tpl/list");
+            GotoList();
         }
         try
         {
             await _iocManager.Resolve<IDockerfileTplService>().UpdateAsync(Id, _info);
             await js.InvokeVoidAsync("layer.alert", "修改成功", new {icon = 1});
-            nav.NavigateTo($"/docker/tpl/update/{_info.Id}");
+            GotoList();
         }
         catch (Exception e)
         {
@@ -72,7 +72,7 @@
         if (Id < 1 || _info == null)
         {
             await js.InvokeVoidAsync("layer.alert", "Dockerfile模板不存在", new {icon = 2, title = "出错了"});
-            nav.NavigateTo($"/docker/tpl/list");
+            GotoList();
         }
     }
 
@@ -84,7 +84,7 @@
             if (_info == null)
             {
                 await js.InvokeVoidAsync("layer.alert", "Dockerfile模板不存在", new {icon = 2, title = "出错了"});
-                nav.NavigateTo($"/docker/tpl/list");
+                GotoList();
             }
         }
     }
