--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/Main.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/Main.razor
@@ -295,7 +295,7 @@
     // FSS 任务组数
         _taskGroupCount = await _iocManager.Resolve<ITaskGroupList>().Count();
     // FSS 未执行数
-        _unExecuteCount = await _iocManager.Resolve<ITaskList>().ToUnRunCountAsync();
+        _unExecuteCount = await _iocManager.Resolve<ITaskGroupList>().ToUnRunCountAsync();
     // FSS 客户端数
         _clientCount = await _iocManager.Resolve<INodeClient>().ToClientCountAsync();
     // FSS 今日失败数
