修改显示客户端的JobName

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/UnRunList.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/UnRunList.razor
@@ -176,13 +176,12 @@
             await GetList();
             await InvokeAsync(StateHasChanged);
         };
-        //_timer.Enabled = true;
+        _timer.Enabled = true;
     }
 
     private async Task GetList()
     {
         _lst = await _iocManager.Resolve<ITaskList>().ToUnRunListAsync(_pageSize, PageIndex, out _totalCount);
-        _totalCount = _lst.Count;
     }
     
     private void GotoList()
