--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/client/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/client/List.razor
@@ -74,7 +74,7 @@
                                     <div class="layui-table-cell laytable-cell-14-0-4">@client.UseAt.ToString("yyyy-MM-dd HH:mm:ss")</div>
                                 </td>
                                 <td data-field="Games">
-                                    <div class="layui-table-cell laytable-cell-14-0-5">@string.Join(',', client.Jobs)</div>
+                                    <div class="layui-table-cell laytable-cell-14-0-5">@client.JobName</div>
                                 </td>
                             </tr>
                         }
@@ -99,7 +99,7 @@
 
     [Parameter] public int PageIndex { get; set; }
     private int _totalCount;
-    private int _pageSize = 20;
+    private int _pageSize = 9999;
 
     private List<ClientConnectVO> _lst = new();
     private bool _isFirst;
@@ -109,15 +109,8 @@
         if (_isFirst) return;
         _isFirst = true;
 
-        _lst = await _iocManager.Resolve<INodeClient>().ToClientListAsync();
-        if (_lst == null)
-        {
-            _lst = new();
-            return;
-        }
+        _lst = await _iocManager.Resolve<INodeClient>().ToClientListAsync() ?? new();
         _lst = _lst.OrderByDescending(o => o.RegisterAt).ToList();
         _totalCount = _lst.Count;
-        _lst = _lst.ToList(_pageSize, PageIndex);
     }
-
 }
