1、项目属性添加域名 2、修改集群的排序方式

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/tpl/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/tpl/List.razor
@@ -87,7 +87,7 @@
         _isFirst = true;
 
         _lst = await _iocManager.Resolve<IYamlTplService>().ToListAsync();
-        _lst = _lst.OrderByDescending(o => o.Id).ToList();
+        _lst = _lst.OrderBy(o => o.K8SKindType).ToList();
         _totalCount = _lst.Count;
     }
 
