--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/tpl/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/tpl/Update.razor
@@ -47,6 +47,15 @@
                 <textarea @bind="_info.Template" placeholder="Yaml模板内容" class="layui-textarea" style="margin-top: 0; margin-bottom: 0; height: 400px;"></textarea>
             </div>
         </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">模板</label>
+            <div class="layui-input-block">
+                <label>${project_name}</label>
+                <label>${entry_point}</label>
+                <label>${entry_port}</label>
+                <label>${domain}</label>
+            </div>
+        </div>
         <div class="layui-form-item layui-layout-admin">
             <div class="layui-input-block">
                 <div class="layui-footer" style="left: 0;">
