--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/List.razor
@@ -114,7 +114,7 @@
                                 </td>
                                 <td data-field="Title">
                                     <div class="layui-table-cell laytable-cell-14-0-9">
-                                        <button class="layui-btn layui-btn-sm" @onclick="()=>GotoUpdate(info.Id)">编辑</button>
+                                        <button class="layui-btn layui-btn-sm" @onclick="() => GotoUpdate(info.Id)">编辑</button>
                                     </div>
                                 </td>
                             </tr>
@@ -162,12 +162,16 @@
 
     private string GetTimeSetting(TaskGroupVO group)
     {
-        return !string.IsNullOrWhiteSpace(@group.Cron) ? @group.Cron : $"{@group.IntervalMs} ms";
+        return !string.IsNullOrWhiteSpace(group.Cron) ? group.Cron : $"{group.IntervalMs} ms";
     }
 
     private async Task RefreshCache()
     {
-        await _iocManager.Resolve<ITaskGroupList>().ToListAndSaveAsync();
+        _lst = await _iocManager.Resolve<ITaskGroupList>().ToListAndSaveAsync();
+        _lst = _lst.OrderByDescending(o => o.Id).ToList();
+        _totalCount = _lst.Count;
+        _lst = _lst.ToList(_pageSize, PageIndex);
+
         await js.InvokeVoidAsync("layer.alert", "刷新成功", new {icon = 1});
         nav.NavigateTo("/fss/task_group/list");
     }
@@ -181,4 +185,5 @@
     {
         nav.NavigateTo($"/fss/task_group/update/{id}");
     }
+
 }
